# pre-commit-hooks

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  environment.yml  genindex.html  index.html  manage_env.sh  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tst.sh
.github/: RELEASE-TEMPLATE.md
.github/workflows/: lint.yml  release.yml  sphinx.yml
.gitlab/issue_templates/: Bug.md
_sources/: index.rst.txt
_sources/hooks/: check_missing_requirements.rst.txt
_sources/utils/: hook.rst.txt  setup_file.rst.txt
doc/: conf.py  index.rst
doc/hooks/: check_mypy_imports.rst  check_pylint_imports.rst
hooks/: check_missing_requirements.html  check_missing_requirements.py  check_mypy_import_errors.py  check_mypy_imports.html  check_pylint_import_errors.py  check_pylint_imports.html
hooks/tests/utils/: test_pyproject_file.py  test_setup_file.py
hooks/utils/: __init__.py  config_file.py  hook.py  pyproject_file.py  setup_file.py
utils/: hook.html  setup_file.html
