[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hooks"
version = "0.3.8-alpha"
description = "Custom pre-commit hooks for use within our projects"
authors = [ "Tom Collingwood <tom.collingwood@stfc.ac.uk>","Rob Firth <robert.firth@stfc.ac.uk>", "Alex Gregory <alex.g>"]
license = "MIT"
repository = "https://github.com/stfc/pre-commit-hooks"
keywords = [ "pre-commit", "hooks",]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [ "regex", "pylint", "pylint.reporters", "pylint.lint",  "requirements", "toml",]
ignore_missing_imports = true

[tool.isort]
profile = "black"
skip = [ "build_seq.py", "conf.py",]
float_to_top = true

[tool.tox]
legacy_tox_ini = "[tox]\nskipsdist = true\nenvlist = py39\n\n[testenv]\nwhitelist_externals = poetry\npassenv = RUNNER PLATFORM_ENVVAR\ncommands =\n    poetry install -v\n    poetry run python -m unittest\n"

[tool.poetry.scripts]
check-missing-requirements = "hooks.check_missing_requirements:main"
check-mypy-import-errors = "hooks.check_mypy_import_errors:main"
check-pylint-import-errors = "hooks.check_pylint_import_errors:main"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
regex = "*"
requirements-parser = "^0.2.0"
toml = "^0.10.2"
mypy = "^1.1.1"
mypy-extensions = "^1.0.0"
pylint = "^3.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.15.0"
tox = "^3.24.4"
jupyterlab-code-formatter = "^1.4.10"
ruff = "^0.6.4"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[tool.ruff]
line-length = 88
# Note: Ruff supports a top-level `src` option in lieu of isort's `src_paths` setting.
src = ["hooks"]


[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
