[metadata]
name = hooks
author = Tom Collingwood
author-email = tom.collingwood@stfc.ac.uk
summary = Hartree Centre pre-commit hooks
license = MIT license
home-page = https://gitlab.stfc.ac.uk/HDS/pre-commit-hooks

[options]
install_requires =
    requirements-parser
    mypy
    regex
    pylint

[options.entry_points]
console_scripts =
    check-missing-requirements = hooks.check_missing_requirements:main
    check-mypy-import-errors = hooks.check_mypy_import_errors:main
    check-pylint-import-errors = hooks.check_pylint_import_errors:main

[files]
packages =
    hooks

[build_sphinx]
builder = html
source-dir = doc/
build-dir = doc/_build
all-files = 1
warning-is-error = false

[flake8]
max-line-length = 88
exclude =
    .git
    __pycache__
    old
    build
    dist
    doc
    .eggs
statistics = 1
doctests = 1
ignore = E203, W503
# E203 (whitespace before ':') - let black handle this
# W503 (line break before binary operator) - let black handle this

[isort]
profile = black
float_to_top=true
skip =
    build_seq.py
    conf.py

[aliases]
lint = flake8

# tox (https://tox.readthedocs.io/) is a tool for running tests
# in multiple virtualenvs. This configuration file will run the
# test suite on all supported python versions. To use it, "pip install tox"
# and then run "tox" from this directory.
[tox:tox]
envlist = py39

[testenv]
deps =
passenv = RUNNER PLATFORM_ENVVAR
commands =
    python -m unittest discover

[pylint]
persistent = yes  # keep local history to track improvements (or lack thereof)
max-line-length = 88
output-format = colorized

[pylint.MESSAGES CONTROL]
disable = C0330, C0326
# C0330 (wrong-hanging-indentation) - let black handle this
# C0326 (bad whitespace) - let black handle this

[pylint.basic]
# pylint won't complain if these short variable names are used:
good-names = i, j, k, e, df, n, t

[mypy]
warn_return_any = True
warn_unused_configs = True
warn_redundant_casts = True

[mypy-pylint]
ignore_missing_imports = True

[mypy-regex]
ignore_missing_imports = True

[mypy-requirements]
ignore_missing_imports = True
